fixed color contrast

--- a/styles/course-small.css
+++ b/styles/course-small.css
@@ -1,7 +1,7 @@
 @media (max-width: 670px) {
 
     header {
-        background: rgb(106, 86, 150);
+        background: rgb(177, 155, 223);
         padding: 1rem;
         display: block;
     }
