--- a/styles/course.css
+++ b/styles/course.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-    background: rgb(106, 86, 150);
+    background: rgb(177, 155, 223);
     display: block;
 }
 
